# CUMCM-Paper-And-SourceCode

./: .gitignore  my.md
.github/workflows/: python-app.yml  python_macos.yml  python_win.yml
2010C-Oil-Pipeline-Layout/: CMakeLists.txt  README.md  company3_eval_2_1.cpp  company3_eval_3_1.cpp
2011B交巡警服务平台/: problem1_platform_allocation.py  requirements.txt
2011D天然肠衣搭配/: natural_casing_optimization.py
2012A葡萄酒评价/: requirements.txt  wine_evaluation_analysis.py
2012B太阳能小屋设计/: requirements.txt  solar_house_design.py
2012D机器人避障问题/: robot_obstacle_avoidance.py
2013A道路通行能力/: requirements.txt  traffic_capacity_analysis.py
2013C古塔变形/: pagoda_deformation_analysis.py
2013D公共自行车系统/: public_bicycle_system.py  requirements.txt
2014C生猪养殖管理/: pig_farming_management.py
2014D储药柜的设计/: medicine_cabinet_design.py
2015A太阳影子定位/: solar_shadow_positioning.py
2016A系泊系统的设计/: mooring_system_design.py
2018B智能RGV的动态调度策略/: rgv_dynamic_scheduling.py
2019A高压油管的压力控制/: high_pressure_oil_pipe.py
2019B同心协力/: problem1_optimization.py  problem3_metropolis.py  problem4_optimization.py
2019C机场出租车/: queueing_system.py  queueing_system_ortools.py  queueing_system_pulp.py  requirements.txt
2020A炉温曲线/: problem1_temperature_curve.py  problem2_velocity_optimization.py  problem3_parameter_optimization.py  problem4_temperature_analysis.py
2021A射电望远镜/: radio_telescope.py
2021B乙醇偶合制备烯烃/: ethanol_to_olefins.py
2021C原材料的订购与运输/python代码/: requirements.txt
2023A定日镜场的优化设计/代码/代码/: cal_DNI.py  cal_alps_gams.py  cal_dhr.py  cal_eta.py  cal_nvec.py  main1.py  requirements.txt
2023A定日镜场的优化设计/代码/代码2/: Code.py  Cross.py  E_limit.py  E_show.py  Fun.py  GA.py  Mutation.py  Select.py  Test.py  main2.py
2023A定日镜场的优化设计/代码/代码3/: H_limit.py  Test.py  (+1 more)
2024B生产决策/python/: DATA_README.md  README.md  decision_results.xlsx  main.py  multi_stage_production_results.xlsx  problem_1_binomial_distribution_min_value_solver.py  problem_1_normal_distribution_min_value_solver.py  problem_2_exhaustive_process_decision_analysis.py  problem_3_semi_finished_goods_analysis.py.py  problem_4_defective_rate_change_with_problem_2_execution.py  problem_4_defective_rate_change_with_problem_3_execution.py.py  problem_4_sampling_simulation_and_plot.py  requirements.txt  run.sh  test_structure.py
2024B生产决策/结果图表/: 问题三决策结果.xlsx  问题二决策结果.xlsx  问题四次品率改变后问题三决策方案最优排名统计.xlsx
2024C种植策略/python代码/: 2023利润统计.py  23年各作物种植亩数.py  DATA_EXAMPLE.md  DATA_README.md  PROJECT_SUMMARY.md  README.md  clustering_analysis.py  clustering_full.py  cost_profit.py  cost_profit_analysis.py  cost_profit_full.py  cost_reformat.py  data_label.py  field_area.py  field_area_analysis.py  field_area_full.py  main.py  plot_analysis.py  plot_full.py  price_analysis.py  price_calculation.py  requirements.txt  run.sh  test_structure.py  year2023_acres.py  year2023_analysis.py  year2023_profit.py  平均售价.py  成本.py  成本利润.py  数据标签.py  聚类.py
gemini_icpc2025/: CMakeLists.txt  README.md  a.cpp  c.cpp  d.cpp  e.cpp  f.cpp  h.cpp  i.cpp  j.cpp  k.cpp  l.cpp
(+31 files in other folders)
